--- a/题一.html
+++ b/题一.html
@@ -10,7 +10,7 @@
 
 	.main{width:100%;overflow:hidden;min-height: 100%;}
 	.left{width:100px;background-color:#0CC;margin-bottom:-9999px;padding-bottom:9999px;float:left;min-height: 100%}
-	.right{width:100%;background-color:#F00;float:left;min-height: 100%;margin-bottom:-9999px;padding-bottom:9999px;font-size: 30px;margin-right: -100px}
+	.right{background-color:#F00;min-height: 100%;margin-bottom:-9999px;padding-bottom:9999px;font-size: 30px;margin-left:100px;}
 	</style>
 	<script src="jquery-3.0.0.js"></script>
 	<script>
@@ -21,27 +21,11 @@
 <body>
 	<div class="main">
 	    <div class="left">左侧内容1</div>
-	    <div class="right">右侧内容1<br />右侧内容2<br />右侧内容3
-	    	右侧内容1<br />右侧内容2<br />右侧内容3
-	    	右侧内容1<br />右侧内容2<br />右侧内容3
-	    	右侧内容1<br />右侧内容2<br />右侧内容3
-	    	右侧内容1<br />右侧内容2<br />右侧内容3
-	    	右侧内容1<br />右侧内容2<br />右侧内容3
-	    	右侧内容1<br />右侧内容2<br />右侧内容3
-	    	右侧内容1<br />右侧内容2<br />右侧内容3
-
+	    <div class="right">
+			两列定宽，一列自适应与该例子一列定宽一列自适应原理是一样的
 
 	    </div>
 	</div>
-	<!-- <div class="demo">
-		<p>
-			<img src="ilta.png" alt="">sdhsajfhsdjfhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
-			sdhsajfhsdjfhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
-			sdhsajfhsdjfhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
-		
-		</p>
-		
-	</div> -->
 </div>
 </body>
 </html>
