--- a/右列定宽左列自适应.html
+++ b/右列定宽左列自适应.html
@@ -9,7 +9,7 @@
 	html,body {height: 100%}   
 
 	.main{width:100%;overflow:hidden;min-height: 100%;}
-	.left{width:100%;background-color:#0CC;margin-bottom:-9999px;padding-bottom:9999px;min-height: 100%;float: left;margin-right: -100px;}
+	.left{width:100%;background-color:#0CC;margin-bottom:-9999px;padding-bottom:9999px;min-height: 100%;margin-right: -100px;float: left}
 	.right{width:100px;background-color:#F00;min-height: 100%;margin-bottom:-9999px;padding-bottom:9999px;font-size: 30px;float: right;}
 	</style>
 	<script src="jquery-3.0.0.js"></script>
